<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/scan_barcode_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/scan_barcode_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tVFormatC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/format"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tVFormat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/tVFormatC"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="BARCODE_FORMAT_NAME" />

    <TextView
        android:id="@+id/tVValueTypeC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/value_type"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tVFormatC" />

    <TextView
        android:id="@+id/tVValueType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/tVValueTypeC"
        app:layout_constraintTop_toBottomOf="@+id/tVFormat"
        tools:text="BARCODE_VALUE_TYPE" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/scan_barcode_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tVValueTypeC">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tVDisplayValC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/display_value"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/result_textview"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/result_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:freezesText="true"
                android:text="@string/no_barcode_captured"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iBCopyDVal" />

            <TextView
                android:id="@+id/tVRawStringC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/raw_string"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@id/tVRawString"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tVRawString"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iBCopyRStr"
                tools:text="RAW_STRING" />

            <TextView
                android:id="@+id/tVRawBytesC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/raw_bytes_hex"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@id/tVRawBytes"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tVRawBytes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iBCopyRByte"
                tools:text="RAW_BYTES" />

            <ImageButton
                android:id="@+id/iBCopyDVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@android:string/copy"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_content_copy_24"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <ImageButton
                android:id="@+id/iBCopyRStr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@android:string/copy"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/result_textview"
                app:srcCompat="@drawable/ic_baseline_content_copy_24" />

            <ImageButton
                android:id="@+id/iBCopyRByte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@android:string/copy"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tVRawString"
                app:srcCompat="@drawable/ic_baseline_content_copy_24" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
